--- a/RadioDataSqliteTbl/Base.lproj/Main.storyboard
+++ b/RadioDataSqliteTbl/Base.lproj/Main.storyboard
@@ -39,10 +39,26 @@
                                     <segue destination="1xv-fV-h2d" kind="show" identifier="updateSegue" id="jvi-HL-Ffr"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jff-lt-ANx">
+                                <rect key="frame" x="79" y="20" width="204" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ey9-ro-0I8">
+                                <rect key="frame" x="304" y="20" width="55" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <action selector="searchBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9zS-Wl-X85"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="lineSearch" destination="Jff-lt-ANx" id="AuZ-vN-YEV"/>
                         <outlet property="tableView" destination="Epz-jD-GVN" id="odd-f7-fjn"/>
                     </connections>
                 </viewController>
